write nav html section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
 
     <nav>
-
+        <h1>Welcome</h1>
+        <ul>
+            <li>Portfolio</li>
+            <li>About Me</li>
+            <li>Contact</li>
+        </ul>
+        <a class="toggleNav" href="#">*Menu</a>
     </nav>
     
 </body>
