--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-
     <nav>
         <h1>Welcome</h1>
-        <a class="toggleNav" href="#">*Menu</a>
+        <a class="toggleNav" href="#">M</a>
     </nav>
     
 </body>
