add header html section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <h1>Welcome</h1>
         <a class="toggleNav" href="#">M</a>
     </nav>
-    
+
+    <header>
+        <h1>Hi there, I'm Allassane <span>I'm a full stack Web Developer</span></h1>
+        <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+    </header>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <button></button>
 </body>
 </html>
