add style header title and paragraph

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
 
     <header>
-        <h1>Hi there, I'm Allassane <span>I'm a full stack Web Developer</span></h1>
+        <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
         <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
     </header>
     <ul>
