--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <header>
         <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
         <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        <ul>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+        </ul>
     </header>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-    <button></button>
+    
+    <a class="btn-round" href="">B</a>
 </body>
 </html>
