--- a/index.html
+++ b/index.html
@@ -6,25 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/a1c06e2fcd.js" crossorigin="anonymous"></script>
+    <title>Allassane Portfolios</title>
 </head>
 <body>
     <nav>
         <h1>Welcome</h1>
-        <a class="toggleNav" href="#">M</a>
+        <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
     </nav>
 
     <header>
         <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
         <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <ul>
-            <li>I</li>
-            <li>I</li>
-            <li>I</li>
-            <li>I</li>
-            <li>I</li>
+            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
-        <a class="btn-round" href="">B</a>
+        <a class="btn-round" href="#"><i class="fa-light fa-angle-down"></i></a>
     </header>
       
 </body>
