change icons header button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <li><a href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
             <li><a href="https://twitter.com/AllassaneDicko0/"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
-        <a class="btn-round" href="#"><i class="fa-light fa-angle-down"></i></a>
+        <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
+    
     </header>
       
 </body>
