create class social for social media icons: to be more explicite in css

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
         <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <ul>
-            <li><a href="https://www.linkedin.com/in/allassane-dicko-744aaa224"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
-            <li><a href="https://twitter.com/AllassaneDicko0/"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a class="social" href="https://www.linkedin.com/in/allassane-dicko-744aaa224"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a class="social" href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
+            <li><a class="social" href="https://twitter.com/AllassaneDicko0/"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
         <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
     
