--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
     </nav>
 
-    <header>
+    <section id="headline">
         <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
         <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <ul>
@@ -25,7 +25,7 @@
         </ul>
         <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
     
-    </header>
+    </section>
       
 </body>
 </html>
