change nav to header

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>Allassane Portfolios</title>
 </head>
 <body>
-    <nav>
+    <header>
         <h1>Welcome</h1>
         <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
-    </nav>
+    </header>
 
     <section id="headline">
         <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
