--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome</h1>
+        <h1><a href="#">Welcome</a></h1>
         <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
     </header>
 
