start work section html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
             <li><a class="social" href="https://twitter.com/AllassaneDicko0/"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
         <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
-    
+    </section>
+
+    <section id="works">
+        <h2>My Recent Work</h2>
+        <hr>
+        <ul>
+            <li></li>
+        </ul>
     </section>
       
 </body>
