add body backroung color #E5E5E5

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>My Recent Work</h2>
         <hr>
         <ul>
-            <li>
+            <li class="work">
 
             </li>
         </ul>
