change work section display type to grid

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <section id="works">
-        <h2>My Recent Work</h2>
+        <h2>My Recent Works</h2>
         <hr>
         <ul>
             <li class="work">
