add card html to work section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
         <hr>
         <ul>
             <li class="work">
-
+                <img src="#" alt="project image">
+                <div>
+                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <ul>
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+                    <button>See Project</button>
+                </div>
             </li>
         </ul>
     </section>
