add card style to work section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="#" alt="project image">
                 <div>
                     <h2>Multi-Post Stories Gain+Glory</h2>
-                    <ul>
+                    <ul class="list-languages">
                         <li>Ruby on rails</li>
                         <li>css</li>
                         <li>JavaScript</li>
