--- a/index.html
+++ b/index.html
@@ -43,6 +43,71 @@
                     <button>See Project</button>
                 </div>
             </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+                    <button>See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+                    <button>See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+                    <button>See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+                    <button>See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+                    <button>See Project</button>
+                </div>
+            </li>
         </ul>
     </section>
       
