add about me html section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <section id="headline">
         <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
-        <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! 
+            If you like what you see and have a project that needs to be coded, don’t hestiate to contact me.</p>
         <ul>
             <li><a class="social" href="https://www.linkedin.com/in/allassane-dicko-744aaa224"><i class="fa-brands fa-linkedin"></i></a></li>
             <li><a class="social" href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
@@ -112,7 +113,12 @@
     </section>
 
     <section id="aboutme">
-        
+        <h2>About me</h2>
+        <p>Who am I? A conscientious Full Stack Web Developer. Tech enthusiast looking for a challenge.
+            If you like what you see and have a project that needs to be coded in an organized, conscientious, and dynamic way.
+            Do not hesitate to contact me.</p>
+        <button></button>
+        <ul></ul>
     </section>
       
 </body>
