add style to about me section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <p>Who am I? A conscientious Full Stack Web Developer. Tech enthusiast looking for a challenge.
             If you like what you see and have a project that needs to be coded in an organized, conscientious, and dynamic way.
             Do not hesitate to contact me.</p>
-        <button></button>
+        <button class="buttons">Get My Resume</button>
         <ul></ul>
     </section>
       
