--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <section id="headline">
-        <h1>Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
+        <h1 class="section-title">Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
         <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! 
             If you like what you see and have a project that needs to be coded, don’t hestiate to contact me.</p>
         <ul>
@@ -28,7 +28,7 @@
     </section>
 
     <section id="works">
-        <h2>My Recent Works</h2>
+        <h2 class="section-title">My Recent Works</h2>
         <hr>
         <ul>
             <li class="work">
@@ -47,73 +47,21 @@
             <li class="work">
                 <img src="#" alt="project image">
                 <div>
-                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
                     <ul class="list-languages">
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavaScript</li>
-                        <li>html</li>
+                        <li class="tags">Ruby on rails</li>
+                        <li class="tags">css</li>
+                        <li class="tags">JavaScript</li>
+                        <li class="tags">html</li>
                     </ul>
-                    <button>See Project</button>
-                </div>
-            </li>
-            <li class="work">
-                <img src="#" alt="project image">
-                <div>
-                    <h2>Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavaScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button>See Project</button>
-                </div>
-            </li>
-            <li class="work">
-                <img src="#" alt="project image">
-                <div>
-                    <h2>Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavaScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button>See Project</button>
-                </div>
-            </li>
-            <li class="work">
-                <img src="#" alt="project image">
-                <div>
-                    <h2>Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavaScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button>See Project</button>
-                </div>
-            </li>
-            <li class="work">
-                <img src="#" alt="project image">
-                <div>
-                    <h2>Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavaScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button>See Project</button>
+                    <button class="buttons">See Project</button>
                 </div>
             </li>
         </ul>
     </section>
 
     <section id="aboutme">
-        <h2>About me</h2>
+        <h2 class="section-title">About me</h2>
         <p>Who am I? A conscientious Full Stack Web Developer. Tech enthusiast looking for a challenge.
             If you like what you see and have a project that needs to be coded in an organized, conscientious, and dynamic way.
             Do not hesitate to contact me.</p>
