add aboutme background image

--- a/index.html
+++ b/index.html
@@ -34,14 +34,66 @@
             <li class="work">
                 <img src="#" alt="project image">
                 <div>
-                    <h2>Multi-Post Stories Gain+Glory</h2>
+                    <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
                     <ul class="list-languages">
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavaScript</li>
-                        <li>html</li>
+                        <li class="tags">Ruby on rails</li>
+                        <li class="tags">css</li>
+                        <li class="tags">JavaScript</li>
+                        <li class="tags">html</li>
                     </ul>
-                    <button>See Project</button>
+                    <button class="buttons">See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li class="tags">Ruby on rails</li>
+                        <li class="tags">css</li>
+                        <li class="tags">JavaScript</li>
+                        <li class="tags">html</li>
+                    </ul>
+                    <button class="buttons">See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li class="tags">Ruby on rails</li>
+                        <li class="tags">css</li>
+                        <li class="tags">JavaScript</li>
+                        <li class="tags">html</li>
+                    </ul>
+                    <button class="buttons">See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li class="tags">Ruby on rails</li>
+                        <li class="tags">css</li>
+                        <li class="tags">JavaScript</li>
+                        <li class="tags">html</li>
+                    </ul>
+                    <button class="buttons">See Project</button>
+                </div>
+            </li>
+            <li class="work">
+                <img src="#" alt="project image">
+                <div>
+                    <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+                    <ul class="list-languages">
+                        <li class="tags">Ruby on rails</li>
+                        <li class="tags">css</li>
+                        <li class="tags">JavaScript</li>
+                        <li class="tags">html</li>
+                    </ul>
+                    <button class="buttons">See Project</button>
                 </div>
             </li>
             <li class="work">
