add card (html and css) to about me section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img src="#" alt="project image">
                 <div>
                     <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
+                    <ul class="list-tag">
                         <li class="tags">Ruby on rails</li>
                         <li class="tags">css</li>
                         <li class="tags">JavaScript</li>
@@ -48,7 +48,7 @@
                 <img src="#" alt="project image">
                 <div>
                     <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
+                    <ul class="list-tag">
                         <li class="tags">Ruby on rails</li>
                         <li class="tags">css</li>
                         <li class="tags">JavaScript</li>
@@ -61,7 +61,7 @@
                 <img src="#" alt="project image">
                 <div>
                     <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
+                    <ul class="list-tag">
                         <li class="tags">Ruby on rails</li>
                         <li class="tags">css</li>
                         <li class="tags">JavaScript</li>
@@ -74,7 +74,7 @@
                 <img src="#" alt="project image">
                 <div>
                     <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
+                    <ul class="list-tag">
                         <li class="tags">Ruby on rails</li>
                         <li class="tags">css</li>
                         <li class="tags">JavaScript</li>
@@ -87,7 +87,7 @@
                 <img src="#" alt="project image">
                 <div>
                     <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
+                    <ul class="list-tag">
                         <li class="tags">Ruby on rails</li>
                         <li class="tags">css</li>
                         <li class="tags">JavaScript</li>
@@ -100,7 +100,7 @@
                 <img src="#" alt="project image">
                 <div>
                     <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-                    <ul class="list-languages">
+                    <ul class="list-tag">
                         <li class="tags">Ruby on rails</li>
                         <li class="tags">css</li>
                         <li class="tags">JavaScript</li>
@@ -113,12 +113,47 @@
     </section>
 
     <section id="aboutme">
-        <h2 class="section-title">About me</h2>
-        <p>Who am I? A conscientious Full Stack Web Developer. Tech enthusiast looking for a challenge.
-            If you like what you see and have a project that needs to be coded in an organized, conscientious, and dynamic way.
-            Do not hesitate to contact me.</p>
-        <button class="buttons">Get My Resume</button>
-        <ul></ul>
+        <div class="resume">
+            <h2 class="section-title">About me</h2>
+            <p>Who am I? A conscientious Full Stack Web Developer. Tech enthusiast looking for a challenge.
+                If you like what you see and have a project that needs to be coded in an organized, conscientious, and dynamic way.
+                Do not hesitate to contact me.</p>
+            <button class="buttons">Get My Resume</button>
+        </div>
+        <ul class="skills">
+            <li class="skill">
+                <img src="images/IconSkill.png" alt="">
+                <h3>Languages</h3>
+                <ul class="list-tag">
+                    <li class="tags">JavaScript</li>
+                    <li class="tags">Ruby</li>
+                    <li class="tags">Html</li>
+                    <li class="tags">Css</li>
+                </ul>
+            </li>
+            <li class="skill">
+                <img src="images/IconFramework.png" alt="">
+                <h3>Frameworks</h3>
+                <ul class="list-tag">
+                    <li class="tags">Bootstrap</li>
+                    <li class="tags">Ruby on rails</li>
+                    <li class="tags">RSpec</li>
+                    <li class="tags">Capybara</li>
+                    <li class="tags">Selenium</li>
+                </ul>
+            </li>
+            <li class="skill">
+                <img src="images/IconLangguage.png" alt="">
+                <h3>Skills</h3>
+                <ul class="list-tag">
+                    <li class="tags">Codekit</li>
+                    <li class="tags">GitHub</li>
+                    <li class="tags">Codepen</li>
+                    <li class="tags">Gitlab</li>
+                    <li class="tags">Terminal</li>
+                </ul>
+            </li>
+        </ul>
     </section>
       
 </body>
