rename aboutme to about-me; fix linters errors

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </ul>
     </section>
 
-    <section id="aboutme">
+    <section id="about-me">
         <div class="resume">
             <h2 class="section-title">About me</h2>
             <p>Who am I? A conscientious Full Stack Web Developer. Tech enthusiast looking for a challenge.
