start footer html section

--- a/index.html
+++ b/index.html
@@ -155,5 +155,43 @@
       </li>
     </ul>
   </section>
+
+  <footer>
+    <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+    <form 
+    action="https://formspree.io/f/xoqbpave"
+    method="POST">
+    <label for="name">
+      <input
+        id="name"
+        type="text"
+        placeholder="User Name"
+        name="name"
+        maxlength="30"
+        required
+      />
+    </label>
+    <label for="name">
+      <input
+        id="email"
+        type="text"
+        placeholder="exmple@exemple.com"
+        name="email"
+        required
+      />
+    </label>
+    <label for="message">
+      <textarea
+        maxlength="500"
+        placeholder="your message ..."
+        required
+      ></textarea>
+    </label>
+
+    <button type="submit" class="buttons">Get in touch</button>
+
+    </form>
+  </footer>
+
 </body>
 </html>
