Add styling to title of footer

--- a/index.html
+++ b/index.html
@@ -1,197 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/a1c06e2fcd.js" crossorigin="anonymous"></script>
-  <title>Allassane Portfolios</title>
-</head>
-<body>
-  <header>
-    <h1><a href="#">Welcome</a></h1>
-    <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/a1c06e2fcd.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Allassane Portfolios</title>
+  </head>
+  <body>
+    <header>
+      <h1><a href="#">Welcome</a></h1>
+      <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
+    </header>
 
-  <section id="headline">
-    <h1 class="section-title">Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span></h1>
-    <p>I can help you build a website from front-end to back-end, Look through some of my work and experience! 
-      If you like what you see and have a project that needs to be coded, don’t hestiate to contact me.</p>
-    <ul>
-      <li><a class="social" href="https://www.linkedin.com/in/allassane-dicko-744aaa224"><i class="fa-brands fa-linkedin"></i></a></li>
-      <li><a class="social" href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
-      <li><a class="social" href="https://twitter.com/AllassaneDicko0/"><i class="fa-brands fa-twitter"></i></a></li>
-    </ul>
-    <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
-  </section>
+    <section id="headline">
+      <h1 class="section-title">
+        Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span>
+      </h1>
+      <p>
+        I can help you build a website from front-end to back-end, Look through
+        some of my work and experience! If you like what you see and have a
+        project that needs to be coded, don’t hestiate to contact me.
+      </p>
+      <ul>
+        <li>
+          <a
+            class="social"
+            href="https://www.linkedin.com/in/allassane-dicko-744aaa224"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </li>
+        <li>
+          <a class="social" href="https://github.com/Trast00"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </li>
+        <li>
+          <a class="social" href="https://twitter.com/AllassaneDicko0/"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+        </li>
+      </ul>
+      <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
+    </section>
 
-  <section id="works">
-    <h2 class="section-title"> My Recent Works </h2>
-    <hr>
-    <ul>
-      <li class="work">
-        <img src="#" alt="project image">
-        <div>
-          <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+    <section id="works">
+      <h2 class="section-title">My Recent Works</h2>
+      <hr />
+      <ul>
+        <li class="work">
+          <img src="#" alt="project image" />
+          <div>
+            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+            <ul class="list-tag">
+              <li class="tags">Ruby on rails</li>
+              <li class="tags">css</li>
+              <li class="tags">JavaScript</li>
+              <li class="tags">html</li>
+            </ul>
+            <button class="buttons">See Project</button>
+          </div>
+        </li>
+        <li class="work">
+          <img src="#" alt="project image" />
+          <div>
+            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+            <ul class="list-tag">
+              <li class="tags">Ruby on rails</li>
+              <li class="tags">css</li>
+              <li class="tags">JavaScript</li>
+              <li class="tags">html</li>
+            </ul>
+            <button class="buttons">See Project</button>
+          </div>
+        </li>
+        <li class="work">
+          <img src="#" alt="project image" />
+          <div>
+            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+            <ul class="list-tag">
+              <li class="tags">Ruby on rails</li>
+              <li class="tags">css</li>
+              <li class="tags">JavaScript</li>
+              <li class="tags">html</li>
+            </ul>
+            <button class="buttons">See Project</button>
+          </div>
+        </li>
+        <li class="work">
+          <img src="#" alt="project image" />
+          <div>
+            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+            <ul class="list-tag">
+              <li class="tags">Ruby on rails</li>
+              <li class="tags">css</li>
+              <li class="tags">JavaScript</li>
+              <li class="tags">html</li>
+            </ul>
+            <button class="buttons">See Project</button>
+          </div>
+        </li>
+        <li class="work">
+          <img src="#" alt="project image" />
+          <div>
+            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+            <ul class="list-tag">
+              <li class="tags">Ruby on rails</li>
+              <li class="tags">css</li>
+              <li class="tags">JavaScript</li>
+              <li class="tags">html</li>
+            </ul>
+            <button class="buttons">See Project</button>
+          </div>
+        </li>
+        <li class="work">
+          <img src="#" alt="project image" />
+          <div>
+            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+            <ul class="list-tag">
+              <li class="tags">Ruby on rails</li>
+              <li class="tags">css</li>
+              <li class="tags">JavaScript</li>
+              <li class="tags">html</li>
+            </ul>
+            <button class="buttons">See Project</button>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <section id="about-me">
+      <div class="resume">
+        <h2 class="section-title">About me</h2>
+        <p>
+          Who am I? A conscientious Full Stack Web Developer. Tech enthusiast
+          looking for a challenge. If you like what you see and have a project
+          that needs to be coded in an organized, conscientious, and dynamic
+          way. Do not hesitate to contact me.
+        </p>
+        <button class="buttons">Get My Resume</button>
+      </div>
+      <ul class="skills">
+        <li class="skill">
+          <img src="images/IconSkill.png" alt="" />
+          <h3>Languages</h3>
           <ul class="list-tag">
-            <li class="tags">Ruby on rails</li>
-            <li class="tags">css</li>
             <li class="tags">JavaScript</li>
-            <li class="tags">html</li>
+            <li class="tags">Ruby</li>
+            <li class="tags">Html</li>
+            <li class="tags">Css</li>
           </ul>
-          <button class="buttons">See Project</button>
-        </div>
-      </li>
-      <li class="work">
-        <img src="#" alt="project image">
-        <div>
-          <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+        </li>
+        <li class="skill">
+          <img src="images/IconFramework.png" alt="" />
+          <h3>Frameworks</h3>
           <ul class="list-tag">
+            <li class="tags">Bootstrap</li>
             <li class="tags">Ruby on rails</li>
-            <li class="tags">css</li>
-            <li class="tags">JavaScript</li>
-            <li class="tags">html</li>
+            <li class="tags">RSpec</li>
+            <li class="tags">Capybara</li>
+            <li class="tags">Selenium</li>
           </ul>
-          <button class="buttons">See Project</button>
-        </div>
-      </li>
-      <li class="work">
-        <img src="#" alt="project image">
-        <div>
-          <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+        </li>
+        <li class="skill">
+          <img src="images/Icon Langguage.png" alt="" />
+          <h3>Skills</h3>
           <ul class="list-tag">
-            <li class="tags">Ruby on rails</li>
-            <li class="tags">css</li>
-            <li class="tags">JavaScript</li>
-            <li class="tags">html</li>
+            <li class="tags">Codekit</li>
+            <li class="tags">GitHub</li>
+            <li class="tags">Codepen</li>
+            <li class="tags">Gitlab</li>
+            <li class="tags">Terminal</li>
           </ul>
-          <button class="buttons">See Project</button>
-        </div>
-      </li>
-      <li class="work">
-        <img src="#" alt="project image">
-        <div>
-          <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-          <ul class="list-tag">
-            <li class="tags">Ruby on rails</li>
-            <li class="tags">css</li>
-            <li class="tags">JavaScript</li>
-            <li class="tags">html</li>
-          </ul>
-          <button class="buttons">See Project</button>
-        </div>
-      </li>
-      <li class="work">
-        <img src="#" alt="project image">
-        <div>
-          <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-          <ul class="list-tag">
-            <li class="tags">Ruby on rails</li>
-            <li class="tags">css</li>
-            <li class="tags">JavaScript</li>
-            <li class="tags">html</li>
-          </ul>
-          <button class="buttons">See Project</button>
-        </div>
-      </li>
-      <li class="work">
-        <img src="#" alt="project image">
-        <div>
-          <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-          <ul class="list-tag">
-            <li class="tags">Ruby on rails</li>
-            <li class="tags">css</li>
-            <li class="tags">JavaScript</li>
-            <li class="tags">html</li>
-          </ul>
-          <button class="buttons">See Project</button>
-        </div>
-      </li>
-    </ul>
-  </section>
+        </li>
+      </ul>
+    </section>
 
-  <section id="about-me">
-    <div class="resume">
-      <h2 class="section-title">About me</h2>
-      <p>Who am I? A conscientious Full Stack Web Developer. Tech enthusiast looking for a challenge.
-        If you like what you see and have a project that needs to be coded in an organized, conscientious, and dynamic way.
-        Do not hesitate to contact me.</p>
-      <button class="buttons">Get My Resume</button>
-    </div>
-    <ul class="skills">
-      <li class="skill">
-        <img src="images/IconSkill.png" alt="">
-        <h3>Languages</h3>
-        <ul class="list-tag">
-          <li class="tags">JavaScript</li>
-          <li class="tags">Ruby</li>
-          <li class="tags">Html</li>
-          <li class="tags">Css</li>
-        </ul>
-      </li>
-      <li class="skill">
-        <img src="images/IconFramework.png" alt="">
-        <h3>Frameworks</h3>
-        <ul class="list-tag">
-          <li class="tags">Bootstrap</li>
-          <li class="tags">Ruby on rails</li>
-          <li class="tags">RSpec</li>
-          <li class="tags">Capybara</li>
-          <li class="tags">Selenium</li>
-        </ul>
-      </li>
-      <li class="skill">
-        <img src="images/Icon Langguage.png" alt="">
-        <h3>Skills</h3>
-        <ul class="list-tag">
-          <li class="tags">Codekit</li>
-          <li class="tags">GitHub</li>
-          <li class="tags">Codepen</li>
-          <li class="tags">Gitlab</li>
-          <li class="tags">Terminal</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
+    <footer>
+      <h2 class="section-title">
+        I'm always interested in hearing about new projects, so if you'd like to
+        chat please get in touch.
+      </h2>
+      <form action="https://formspree.io/f/xoqbpave" method="POST">
+        <label for="name">
+          <input
+            id="name"
+            type="text"
+            placeholder="User Name"
+            name="name"
+            maxlength="30"
+            required
+          />
+        </label>
+        <label for="name">
+          <input
+            id="email"
+            type="text"
+            placeholder="exmple@exemple.com"
+            name="email"
+            required
+          />
+        </label>
+        <label for="message">
+          <textarea
+            maxlength="500"
+            placeholder="your message ..."
+            required
+          ></textarea>
+        </label>
 
-  <footer>
-    <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
-    <form 
-    action="https://formspree.io/f/xoqbpave"
-    method="POST">
-    <label for="name">
-      <input
-        id="name"
-        type="text"
-        placeholder="User Name"
-        name="name"
-        maxlength="30"
-        required
-      />
-    </label>
-    <label for="name">
-      <input
-        id="email"
-        type="text"
-        placeholder="exmple@exemple.com"
-        name="email"
-        required
-      />
-    </label>
-    <label for="message">
-      <textarea
-        maxlength="500"
-        placeholder="your message ..."
-        required
-      ></textarea>
-    </label>
-
-    <button type="submit" class="buttons">Get in touch</button>
-
-    </form>
-  </footer>
-
-</body>
+        <button type="submit" class="buttons">Get in touch</button>
+      </form>
+    </footer>
+  </body>
 </html>
