Add social icons and margin to submit button

--- a/index.html
+++ b/index.html
@@ -214,8 +214,18 @@
           ></textarea>
         </label>
 
-        <button type="submit" class="buttons">Get in touch</button>
+        <button type="submit" class="buttons btn-contact">Get in touch</button>
       </form>
+
+      <div class="social-icons">
+        <ul>
+          <li><a href="https://www.linkedin.com/in/allassane-dicko-744aaa224"><i class="fa-brands fa-linkedin"></i></a></li>
+          <li><a href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
+          <li><a href="https://twitter.com/AllassaneDicko0/"><i class="fa-brands fa-twitter"></i></a></li>
+        </ul>
+      </div>
+      <p class="my-email">dickoallassane1997@gmail.com
+      </p>
     </footer>
   </body>
 </html>
