add detail in html: add id to textaera, change label for to email

--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
           <input
             id="name"
             type="text"
-            placeholder="User Name"
+            placeholder="Name"
             name="name"
             maxlength="30"
             required
           />
         </label>
-        <label for="name">
+        <label for="email">
           <input
             id="email"
             type="text"
@@ -208,6 +208,7 @@
         </label>
         <label for="message">
           <textarea
+            id="message"
             maxlength="500"
             placeholder="your message ..."
             required
