change email input type from text to email

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <label for="email">
           <input
             id="email"
-            type="text"
+            type="email"
             placeholder="exmple@exemple.com"
             name="email"
             required
