Add Styling to header element

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <header>
       <h1><a href="#">Welcome</a></h1>
       <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
-      
+      <nav>
+        <ul>
+          <li>Portfolio</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
     </header>
 
     <section id="headline">
