Add Styling  for headline elements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <body>
     <header>
       <h1><a href="#">Welcome</a></h1>
-      <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
       <nav>
         <ul>
           <li>Portfolio</li>
@@ -23,37 +22,40 @@
           <li>Contact</li>
         </ul>
       </nav>
+      <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
     </header>
 
     <section id="headline">
-      <h1 class="section-title">
-        Hi there. I'm Allassane, I'm a <span>full stack Web Developer</span>
-      </h1>
-      <p>
-        I can help you build a website from front-end to back-end, Look through
-        some of my work and experience! If you like what you see and have a
-        project that needs to be coded, don’t hestiate to contact me.
-      </p>
-      <ul>
-        <li>
-          <a
-            class="social"
-            href="https://www.linkedin.com/in/allassane-dicko-744aaa224"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </li>
-        <li>
-          <a class="social" href="https://github.com/Trast00"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-        </li>
-        <li>
-          <a class="social" href="https://twitter.com/AllassaneDicko0/"
-            ><i class="fa-brands fa-twitter"></i
-          ></a>
-        </li>
-      </ul>
-      <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
+      <div class="headline-wrapper">
+        <h1 class="section-title">
+          Hi there. I'm Allassane<br/><span>full stack Web Developer</span>
+        </h1>
+        <p>
+          I can help you build a website from front-end to back-end, Look through
+          some of my work and experience! If you like what you see and have a
+          project that needs to be coded, don’t hestiate to contact me.
+        </p>
+        <ul>
+          <li>
+            <a
+              class="social"
+              href="https://www.linkedin.com/in/allassane-dicko-744aaa224"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a class="social" href="https://github.com/Trast00"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a class="social" href="https://twitter.com/AllassaneDicko0/"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+        </ul>
+        <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>  
+      </div>
     </section>
 
     <section id="works">
